[gd_scene load_steps=17 format=3 uid="uid://bvht273076lxf"]

[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="1_lhb4i"]
[ext_resource type="Script" uid="uid://d00ty5y85td2c" path="res://scenes/ui/onscreen_controll/onscreen_controll.gd" id="1_ph7ib"]
[ext_resource type="Texture2D" uid="uid://1xr2854l0q0r" path="res://assets/sprites/unsorted/a.png" id="2_4nxph"]
[ext_resource type="Texture2D" uid="uid://r1ap0jkbih51" path="res://assets/sprites/unsorted/x.png" id="4_2x15l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h823n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_akydp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pw6vy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rvsdj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mbns7"]

[sub_resource type="Theme" id="Theme_tq8yb"]
Button/styles/disabled = SubResource("StyleBoxEmpty_h823n")
Button/styles/focus = SubResource("StyleBoxEmpty_akydp")
Button/styles/hover = SubResource("StyleBoxEmpty_pw6vy")
Button/styles/normal = SubResource("StyleBoxEmpty_rvsdj")
Button/styles/pressed = SubResource("StyleBoxEmpty_mbns7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x4rmm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yxkpp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g8gpv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qhpsh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pllxo"]

[sub_resource type="Theme" id="Theme_gg8f7"]
Button/styles/disabled = SubResource("StyleBoxEmpty_x4rmm")
Button/styles/focus = SubResource("StyleBoxEmpty_yxkpp")
Button/styles/hover = SubResource("StyleBoxEmpty_g8gpv")
Button/styles/normal = SubResource("StyleBoxEmpty_qhpsh")
Button/styles/pressed = SubResource("StyleBoxEmpty_pllxo")

[node name="OnscreenControl" type="CanvasLayer"]
script = ExtResource("1_ph7ib")

[node name="Virtual Joystic Right" parent="." instance=ExtResource("1_lhb4i")]
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -363.0
offset_top = -364.0
offset_right = -63.0
offset_bottom = -64.0
grow_horizontal = 0
scale = Vector2(1.2, 1.2)
pressed_color = Color(0.72549, 0.796078, 0.219608, 1)
action_left = "left"
action_right = "right"
action_up = "up"
action_down = "down"

[node name="attack" type="Button" parent="."]
offset_left = 196.0
offset_top = 480.0
offset_right = 296.0
offset_bottom = 580.0
scale = Vector2(1.3, 1.3)
theme = SubResource("Theme_tq8yb")
icon = ExtResource("2_4nxph")

[node name="defend" type="Button" parent="."]
offset_left = 60.0
offset_top = 480.0
offset_right = 160.0
offset_bottom = 580.0
scale = Vector2(1.3, 1.3)
theme = SubResource("Theme_gg8f7")
icon = ExtResource("4_2x15l")

[connection signal="button_down" from="attack" to="." method="_on_attack_button_down"]
[connection signal="button_up" from="attack" to="." method="_on_attack_button_up"]
[connection signal="button_down" from="defend" to="." method="_on_defend_button_down"]
[connection signal="button_up" from="defend" to="." method="_on_defend_button_up"]
